--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>madara uciha</h1>
     <img width="100px" src="Screenshot_2024-07-02-13-08-06-281_com.instagram.android.jpg" alt="madara">
+    <h1>WAKE UP TO REALITY</h1>
 <p>yasin mass</p>
 </body>
 </html>
