--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img width="100px" src="Screenshot_2024-07-02-13-08-06-281_com.instagram.android.jpg" alt="madara">
     <h1>yasin</h1>
 <p>yasin mass</p>
-<p>ggg</p>
+<p>ggghhhh</p>
 
 </body>
 </html>
